update rules for banks

--- a/cfg/Custom_Clash.ini
+++ b/cfg/Custom_Clash.ini
@@ -40,8 +40,8 @@ ruleset=🤖 Copilot,[]GEOSITE,bing
 ruleset=🤖 AI服务,[]GEOSITE,category-ai-!cn
 ruleset=🚀 GitHub,[]GEOSITE,github
 ;添加银行这类ip敏感的
-; ruleset=🏦 美国银行,domain-suffix,bankofamerica.com
-; ruleset=🏦 美国银行,domain-keyword,bofa
+ruleset=🏦 美国银行,domain-suffix,bankofamerica.com
+ruleset=🏦 美国银行,domain-keyword,bofa
 ;测速工具包括 SpeedTest 等主流测速工具域名
 ruleset=🚀 测速工具,[]GEOSITE,category-speedtest
 ruleset=📹 YouTube,[]GEOSITE,youtube
@@ -99,7 +99,7 @@ custom_proxy_group=🎥 Emby`select`[]🇭🇰 香港节点`[]🇺🇸 美国节
 custom_proxy_group=🎻 Spotify`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📺 Bahamut`select`[]🇼🇸 台湾节点`[]🚀 手动选择`[]🎯 全球直连
 ; 手动选择位置比较好的ip，单独列出，不要url_test,尽量也不要fallback
-; custom_proxy_group=🏦 美国银行`select`[]United States | 03`[]United States | 05
+custom_proxy_group=🏦 美国银行`select`[]United States丨01`[]United States丨05
 custom_proxy_group=🌎 国外媒体`select`[]🇸🇬 新加坡节点`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=🛒 国外电商`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连`.*
 custom_proxy_group=📢 谷歌FCM`select`[]🇭🇰 香港节点`[]🇺🇸 美国节点`[]🇯🇵 日本节点`[]🇸🇬 新加坡节点`[]🇼🇸 台湾节点`[]🇰🇷 韩国节点`[]🇨🇦 加拿大节点`[]🇬🇧 英国节点`[]🇫🇷 法国节点`[]🇩🇪 德国节点`[]🇳🇱 荷兰节点`[]🇹🇷 土耳其节点`[]🌐 其他地区`[]🚀 手动选择`[]♻️ 自动选择`[]🎯 全球直连
